<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fieldsComplete"
            type="Boolean" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:background="@color/Gray_2"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_constraint_layout"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="12dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/icon_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/portal_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/student_imageview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="2dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/Gray_6"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_student_id"
                app:layout_constraintStart_toStartOf="@+id/tv_student_id"/>

            <TextView
                android:id="@+id/tv_student_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_id"
                android:textColor="@color/Gray_6"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/student_imageview"
                app:layout_constraintStart_toStartOf="@+id/student_imageview"/>

            <TextView
                android:id="@+id/tv_page_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/edit_details_body"
                android:textColor="@color/Gray_6"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_page_desc"
                app:strokeColor="#676767"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context="">

                    <TextView
                        android:id="@+id/tv_department"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/department"
                        android:textColor="@color/Gray_6"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_faculty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/department"
                        android:textColor="@color/Gray_6"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/enter_student_state"
                        android:textColor="@color/Gray_6"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/tv_department"
                        app:layout_constraintTop_toBottomOf="@+id/tv_department" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/enter_email_address"
                        android:textColor="@color/Gray_6"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/tv_faculty"
                        app:layout_constraintTop_toBottomOf="@+id/tv_faculty" />

                    <TextView
                        android:id="@+id/tv_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/enter_phone_no"
                        android:textColor="@color/Gray_6"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/tv_email"
                        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/enter_address"
                        android:textColor="@color/Gray_6"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/tv_entry_year"
                        app:layout_constraintTop_toBottomOf="@+id/tv_entry_year" />

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/gender"
                        android:textColor="@color/Gray_6"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/tv_phone_number"
                        app:layout_constraintTop_toBottomOf="@+id/tv_phone_number" />

                    <TextView
                        android:id="@+id/tv_entry_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/entry_year"
                        android:textColor="@color/Gray_6"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/tv_state"
                        app:layout_constraintTop_toBottomOf="@+id/tv_state" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_edit"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:backgroundTint="@color/Gray_6"
                        android:strokeColor="@color/Gray_6"
                        android:text="@string/edit_student_details"
                        android:textColor="@color/Gray_2"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:cornerRadius="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/address" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/blacklist"
                        android:backgroundTint="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/btn_edit"
                        app:layout_constraintStart_toStartOf="@+id/btn_edit"
                        app:layout_constraintTop_toBottomOf="@+id/btn_edit" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/Gray_6"
                android:strokeColor="@color/Gray_6"
                android:text="@string/next"
                android:textColor="@color/Gray_2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>