<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/studentListCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:cardElevation="3dp"
        app:strokeColor="@color/Gray_6"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/student_imageview"
                android:layout_width="88dp"
                android:layout_height="96dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/portal_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/warning_imageview"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/blacklisted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_id"
                android:textColor="@color/Gray_6"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/student_imageview"
                app:layout_constraintTop_toBottomOf="@+id/student_imageview" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/name"
                android:textColor="@color/Gray_6"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/student_imageview"
                app:layout_constraintTop_toTopOf="@+id/student_imageview" />

            <TextView
                android:id="@+id/tv_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/department"
                android:textColor="@color/Gray_6"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_name"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_blacklist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blacklisted"
                android:textColor="@color/Gray_6"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/warning_imageview"
                app:layout_constraintTop_toBottomOf="@+id/warning_imageview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>